added API Automation task code